objects/MercuryCredential__mdt.object
<CustomObject>
    <description>Stores credentials for Salesforce to access Mercury</description>
    <fields>
        <fullName>EntityID__c</fullName>
        <label>EntityID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>MercuryCredential</label>
    <pluralLabel>MercuryCredentials</pluralLabel>
</CustomObject>